fix: complete mock test
