# docs/swagger.json
@@ -180,6 +180,10 @@
                     "type": "string",
                     "example": "Your order #123 is ready!"
                 },
+                "recipient": {
+                    "type": "string",
+                    "example": "user@example.com"
+                },
                 "scheduled_at": {
                     "type": "string",
                     "example": "2023-10-27T10:00:00Z"
@@ -208,6 +212,10 @@
                 "payload": {
                     "type": "string",
                     "example": "Your order #123 is ready!"
+                },
+                "recipient": {
+                    "type": "string",
+                    "example": "user@example.com"
                 },
                 "scheduled_at": {
                     "type": "string",
